# modrinth-collection-downloader

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: download.rs  log.rs  main.rs  modrinth.rs  packwiz.rs
