[package]
name = "modrinth-collection-downloader"
version = "0.1.0"
edition = "2024"
license = "GPL-3"

[dependencies]
indicatif = "0.18"
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
colored = "3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3.31"
urlencoding = "2"