[package]
name = "modrinth-collection-downloader"
version = "0.1.2"
edition = "2024"
license = "GPL-3"

[dependencies]
indicatif = "0.18"
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
colored = "3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3.31"
urlencoding = "2"
serde_json = "1"
async_zip = { version = "0.0.18", features = ["full", "tokio", "tokio-fs"] }